Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
 
 <p>I'm comparing the historical medals from the Winter Olympics to various geodemographic features of the countries involved.</p>
 
+<p>![scorings compared to rankings]{images/score_vs_rank.png}</p>
+
+<p><em>A comparison of gold-based ranking to a medal scoring system.  Shows both Spearman's rho (the non-parametric analogue of the Pearson correlation coefficient) and Kendall's tau.</em></p>
+
 <p>This is mainly for personal interest, to polish my stats abilities and to get some experience of MySQL databases (upskilling!).  </p>
 
 <p>I've scraped the medals data, linked it to countries and years.  I've got the latitude and longitude data for all the countries, once I've plotted that I'll go through numbers like GDP per person, sports spending, tax revenue and other such numbers to see where the correlations lie (and other relevant statistics).</p>
