Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <p>I'm comparing the historical medals from the Winter Olympics to various geodemographic features of the countries involved.</p>
 
-<p>![scorings compared to rankings]{images/score_vs_rank.png}</p>
+<p><img src="images/score_vs_rank.png" alt="scorings compared to rankings"></p>
 
 <p><em>A comparison of gold-based ranking to a medal scoring system.  Shows both Spearman's rho (the non-parametric analogue of the Pearson correlation coefficient) and Kendall's tau.</em></p>
 
