--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#">About</a>
+                        <a href="../about.html">About</a>
                     </li>
                     <!--<li>-->
                     <!--    <a href="#">Services</a>-->
@@ -108,7 +108,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <p>Olympics redo maintained by <a href="https://github.com/chrisjdavie">chrisjdavie</a></p>
-                    <p>Copyright &copy; Chris J Davie</p>
+                    <p>Copyright &copy; Chris J Davie, 2015</p>
                 </div>
             </div>
             <!-- /.row -->
